<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <ImageView
        android:id="@+id/icon"
        style="@style/ThemeOverlay.ReflektIcon"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:contentDescription="@string/desc_reflekt_lockup"
        android:src="@drawable/gradle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_text"
        android:ems="11"
        android:paddingLeft="10dp"
        android:hint="@string/hint_username"
        android:id="@+id/editUsername"
        android:inputType="text"
        android:background="@drawable/rounded_text"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_text"
        android:ems="11"
        android:paddingLeft="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:id="@+id/editEmail"
        android:background="@drawable/rounded_text"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_text"
        android:ems="11"
        android:paddingLeft="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:id="@+id/editPassword"
        android:background="@drawable/rounded_text"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="18dp"
        android:background="@drawable/rounded_login"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:text="@string/register"
        android:id="@+id/sign_up_button"
        android:onClick="signupButtonClicked"
        android:textAllCaps="false"
        />
</LinearLayout>